--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <img src="./images/pfp.jpg" class="profile-picture" height="200" width="200">
             </div>
             <p class="about__description">
-                Hi! My name is Simon! I am a current Junior computer science major at the University of Texas at Dallas
+                Hi! My name is Simon! I am a current senior computer science major at the University of Texas at Dallas
                 graduating in 2024. My primary interests in computer science lie in web development and software engineering as
                 I am very passionate about these two topics.
                 I am currently seeking internship opportunities as a software engineer or web developer and would be very 
